# demo_pablodubru

./: .gitignore  .gitmodules
build-prueba1-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  prueba1  prueba1.cbp  prueba2
build-prueba1-Desktop-Default/lib/CiA402Device/: CiA402Device.cbp  Makefile  cmake_install.cmake
build-prueba1-Desktop-Default/lib/fcontrol/: Makefile  cmake_install.cmake  fcontrol.cbp
prueba1/: CMakeLists.txt  main.cpp  mysqrt.cpp  mysqrt.h  prueba2.cpp  prueba3.cpp
